fix font vertical alignment

--- a/src/styles/utils/font.scss
+++ b/src/styles/utils/font.scss
@@ -1,14 +1,14 @@
 @font-face {
   font-family: 'Mont';
-  src: url('../../../public/fonts/Mont-Regular.otf') format('opentype');
-  font-weight: 400;
+  src: url('Mont-Bold.ttf') format('truetype');
+  font-weight: 800;
   font-style: normal;
   font-display: swap;
 }
 
 @font-face {
   font-family: 'Mont';
-  src: url('../../../public/fonts/Mont-SemiBold.otf') format('opentype');
+  src: url('Mont-SemiBold.ttf') format('truetype');
   font-weight: 600;
   font-style: normal;
   font-display: swap;
@@ -16,8 +16,8 @@
 
 @font-face {
   font-family: 'Mont';
-  src: url('../../../public/fonts/Mont-Bold.otf') format('opentype');
-  font-weight: 800;
+  src: url('Mont-Regular.ttf') format('truetype');
+  font-weight: 400;
   font-style: normal;
   font-display: swap;
 }
